tests/neg-custom-args/captures/mut-outside-mutable.check
-- Error: tests/neg-custom-args/captures/mut-outside-mutable.scala:5:13 ------------------------------------------------
5 |  update def foreach(op: T => Unit): Unit // error
  |             ^
  |             Update method foreach must be declared in a class extending the `Stateful` trait.
-- Error: tests/neg-custom-args/captures/mut-outside-mutable.scala:9:15 ------------------------------------------------
9 |    update def baz() = 1 // error
  |               ^
  |               Update method baz must be declared in a class extending the `Stateful` trait.
-- Error: tests/neg-custom-args/captures/mut-outside-mutable.scala:14:15 -----------------------------------------------
14 |    update def baz() = 1 // error
   |               ^
   |               Update method baz must be declared in a class extending the `Stateful` trait.
